--- a/cmudb/extensions/db721_fdw/Makefile
+++ b/cmudb/extensions/db721_fdw/Makefile
@@ -11,7 +11,7 @@ MODULE_big = db721_fdw
 DATA = db721_fdw--0.0.1.sql
 OBJS = src/dog.o src/db721_fdw_impl.o src/db721_fdw.o
 SHLIB_LINK = -lstdc++
-
+INC=-I./src
 # If PG_CONFIG is not set, try the default NoisePage build folder first, then try PATH.
 PG_CONFIG ?= ../../../build/postgres/bin/pg_config
 PG_CONFIG ?= pg_config
@@ -26,4 +26,4 @@ override PG_CXXFLAGS += -Wno-register 	# PostgreSQL uses the register storage cl
 # override PG_CXXFLAGS += -O3
 
 PGXS := $(shell $(PG_CONFIG) --pgxs)
-include $(PGXS) ./
+include $(PGXS)
