--- a/cmudb/env/pgtune.auto.conf
+++ b/cmudb/env/pgtune.auto.conf
@@ -18,3 +18,5 @@ effective_io_concurrency = 200
 work_mem = 20971kB
 min_wal_size = 4GB
 max_wal_size = 16GB
+config_log.database = 'noisepage_db'
+config_log.schema   = 'public'
